--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,7 @@
 /* Font style and size*/
 body,
-h1, h2, h3, h4, h5, h6 {
+html,
+h1, h2, h3, h4, h5, h6,
+p, li, span, div {
   font-family: "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
