--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,10 +1,7 @@
-/* Import Google Font: Lato */
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-/* Apply Lato to all text */
+/* Fonts styles */
 body,
 html,
 h1, h2, h3, h4, h5, h6,
 p, li, span, div {
-  font-family: 'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: 'Source Sans 3', "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
