--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,5 +3,5 @@ body,
 html,
 h1, h2, h3, h4, h5, h6,
 p, li, span, div {
-  font-family: 'Source Sans 3', "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: 'Varela', "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
