--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <!-- Google font -->
-<link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
 <!-- Cargar tu custom.css -->
 <link rel="stylesheet" href="/assets/css/custom.css">
