--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,6 +31,8 @@ body, html, p, li, span, div {
 
 /* Ancho del contenedor principal  */
 .page {
-  max-width: 960px;
-  margin: 0 auto;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1.5rem;
 }
