--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,9 @@
 /* Fonts styles */
-.nav__title, .author__name, .author__bio, .author__urls, body, html, p, li, span, div {
+.author__bio, .author__urls, body, html, p, li, span, div {
   font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.nav__title, .author__name, h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -15,6 +15,12 @@ body, html, p, li, span, div {
 
 .site-title {
   font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #333; /* o el color que prefieras */
+}
+
+.nav__title {
+  font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   color: #333; /* o el color que prefieras */
 }
@@ -31,7 +37,7 @@ body, html, p, li, span, div {
 
 /* Ancho del contenedor principal  */
 .page {
-  max-width: 1000px;
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 1.5rem;
