--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,7 +14,7 @@ body, html, p, li, span, div {
 }
 
 .site-title {
-  font-size: 1.5rem;
+  font-size: 20px;
   font-family: 'Montserrat', sans-serif;
   color: #333; /* o el color que prefieras */
 }
