--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,3 +28,14 @@ body, html, p, li, span, div {
 .page__content p {
   text-align: justify;
 }
+
+/* TOC styles */
+.toc .nav__title {
+  font-size: 1rem;
+  background-color: #000000; /* Fondo negro solo para encabezado */
+  color: #ffffff;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  padding: 8px;
+}
+
