--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,7 @@ body, html, p, li, span, div {
   color: #000000;               /* texto oscuro */
   padding: 10px 14px;
   font-size: 0.90rem;
+  text-transform: uppercase;
   border-bottom: 1px solid #e5e5e5;
   text-decoration: none;
 }
