--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,7 +61,7 @@ body, html, p, li, span, div {
 
 /* Ajuste de tamaño según nivel (opcional y sutil) */
 .toc .toc__menu > li > a {
-  font-weight: 600;
+  font-weight: bold;
 }
 .toc .toc__menu > li > ul > li > a {
   padding-left: 24px;
