--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -63,3 +63,23 @@ body, html, p, li, span, div {
   padding-left: 32px;
   font-size: 0.8rem;
 }
+
+/* Organise pictures */
+.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+.align-right {
+  float: right;
+  margin-left: 20px;
+  max-width: 100%;
+}
+
+.align-left {
+  float: left;
+  margin-right: 20px;
+  max-width: 100%;
+}
